# pacemaker

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .grayout.conf  .mailmap  .tito.spec.tmpl  .travis.yml  AUTHORS  BasicSanity.sh  CONTRIBUTING.md  COPYING  ChangeLog  ChangeLog.md  Doxyfile.in  GNUmakefile  INSTALL.md  Makefile  Makefile.am  Makefile.common  NEWS  README  README.markdown  SECURITY.md  TODO.markdown  abi-check  abi-check.in  acinclude.m4  autogen.sh  bumplibs.sh  ccs2cib  ccs2cib.in  cluconf2cib.xsl  configure.ac  configure.in  coverage.sh.in  disable_rgmanager.c  flatten.c  list.h  p-indent  (+15 more)
agents/: Makefile.am
attrd/: Makefile.am  attrd_alerts.c  attrd_alerts.h  attrd_common.c  attrd_common.h  attrd_common_alerts.c  attrd_elections.c  commands.c  internal.h  legacy.c  main.c
cib/: Makefile.am  callbacks.c  callbacks.h  cib.pam  cibio.h  cibmessages.h  cibmon.c  cibpipe.c  cibprimatives.h  common.c  common.h  io.c  main.c  messages.c  notify.c  notify.h  primatives.c  regression.sh  remote.c
crm/: Makefile.am  README  admin-tool.txt  admin_cib_test.sh  cib-example-1.xml  cib-schema.dtd  cib-schema.txt  crm-1.0.dtd  crm-flowchart.fig  crm.txt  crm.xsl  dmalloc_wrapper.h  executioner.txt  msg-schema.txt  security.txt  transition-graph.dtd
crm/cib/: io.c  (+19 more)
crmd/: Makefile.am  atest.c  attrd.c  callbacks.c  ccm.c  cib.c  control.c  corosync.c  crmd.c  crmd.h  crmd_alerts.c  crmd_alerts.h  crmd_callbacks.h  crmd_fsa.h  crmd_lrm.h  crmd_messages.h  crmd_metadata.c  crmd_metadata.h  crmd_utils.h  election.c  fsa.c  fsa_defines.h  fsa_matrix.h  fsa_proto.h  heartbeat.c  join_client.c  join_dc.c  lrm.c  lrm_state.c  main.c  make_dot.pl  membership.c  membership.h  messages.c  misc.c  notify.c  notify.h  pengine.c  remote_lrmd_ra.c  remote_ra.c  (+11 more)
cts/: CIB.py  CIB.py.in  CM_LinuxHAv2.py.in  CM_ais.py  CM_ais.py.in  CM_common.py  CM_corosync.py  CM_fs.py.in  CM_hb.py.in  CM_lha.py  CM_lha.py.in  CTS.py  CTS.py.in  CTSaudits.py  CTSaudits.py.in  CTSlab.py  CTSlab.py.in  CTSproxy.py  CTSproxy.py.in  CTSscenarios.py  CTStests.py  CTStests.py.in  CTSvars.py.in  HBDummy.in  LSBDummy.in  Makefile.am  OCFDummy2.in  OCFIPraTest.py  OCFIPraTest.py.in  OCFMSDummy.in  README  README.md  __init__.py  cib_xml.py  cluster_test  cluster_test.in  crm_mon.xml  cts  cts-attrd.in  cts-cli  (+33 more)
daemons/: Makefile.am
devel/: Makefile.am  README  cov_models.c  cov_nodefs.h  gdbhelpers  scratch.c
doc/: Doxyfile.in  Makefile.am  PCMK-MIB.txt  README.hb2openais  README.md  abi-check.in  acls.txt  asciidoc.reference  cib-example-1.xml  cibadmin.8.in  coding_guidelines.txt  crm-flowchart.fig  crm.8.txt  crm.txt  crm_cli.txt  crm_fencing.txt  crm_resource.8.in  executioner.txt  index.php  msg-schema.txt  openstack.md  pcs-crmsh-quick-ref.md  security.txt  stonith-ng.conf.example
etc/: Makefile.am
extra/: Makefile.am  PCMK-MIB.txt  buildbot.helper  cluster-clean  cluster-helper  cluster-init  clustermon.sh  debugRA.sh  pcmk_notify_sample.sh  pcmk_snmp_helper.sh  showscores.sh
fencing/: Makefile.am  README.md  admin.c  commands.c  config.l  config.y  fence_dummy  fence_false  fence_legacy  fence_legacy.in  fence_pcmk  fence_true  fence_watchdog  history.c  internal.h  main.c  regression.py.in  remote.c  standalone_config.c  standalone_config.h  stonith-ng.conf.example  test.c
include/: Makefile.am  crm_config.h.in  crm_internal.h  doxygen.h  hb_config.h.in  pacemaker-internal.h  pacemaker.h  portability.h
lib/: Makefile.am  libpacemaker.pc.in  pacemaker-cib.pc.in  pacemaker-cluster.pc.in  pacemaker-fencing.pc.in  pacemaker-internal.pc.in  pacemaker-lrmd.pc.in  pacemaker-pe_rules.pc.in  pacemaker-pe_status.pc.in  pacemaker-pengine.pc.in  pacemaker-service.pc.in  pacemaker.pc.in  pcmk-cib.pc.in  pcmk-pe.pc.in  pcmk.pc.in
lrmd/: Makefile.am  ipc_proxy.c  lrm.service.in  lrmd.c  lrmd_alert_api.c  lrmd_private.h  main.c  pacemaker_remote.in  pacemaker_remote.service.in  regression.py  regression.py.in  remote_ctl.c  remoted_pidone.c  test.c  tls_backend.c
maint/: IDEAS.md  Makefile.am  README  bumplibs.in  bumplibs.sh  testcc.cc  testcc_helper.cc  travisci_build_coverity_scan.sh
mcp/: Makefile.am  corosync.c  pacemaker-tmpfiles.conf.in  pacemaker.c  pacemaker.combined.service.in  pacemaker.combined.upstart.in  pacemaker.combined_extra.upstart.in  pacemaker.h  pacemaker.in  pacemaker.service.in  pacemaker.sysconfig  pacemaker.sysconfig.m4  pacemaker.upstart  pacemaker.upstart.in  watchdog.c
pacemakerd/: Makefile.am  corosync.c  pacemaker.c  pacemaker.h  pacemakerd.c
pengine/: Makefile.am  allocate.c  allocate.h  clone.c  constraints.c  container.c  fix_xml.pl  graph.c  group.c  main.c  master.c  native.c  notif.c  notif.h  pe_promotable.c  pengine.c  pengine.h  ptest.c  ptest.supp  regression.core.sh  regression.core.sh.in  regression.sh  regression06.sh  stonith.sh  utilization.c  utils.c  utils.h
python/: Makefile.am  pylintrc  setup.py.in
replace/: Makefile.am  NoSuchFunctionName.c  alphasort.c  daemon.c  inet_pton.c  scandir.c  setenv.c  strchrnul.c  strerror.c  strlcat.c  strlcpy.c  strndup.c  strnlen.c  unsetenv.c  uuid_parse.c
rpm/: Makefile.am  README  pacemaker.spec.in  pacemaker.sysusers.in  rpmlintrc
tests/: Makefile.am  tap-test  test-headers.sh  test1.conf  test2.conf  test3.conf  test4.conf  test5.conf  test6.conf
tools/: 1node2heartbeat  Makefile.am  README.hb_report  attrd.c  attrd.h  attrd_updater.8.inc  attrd_updater.c  ccdv.c  ccm_epoche.c  cib_shadow.c  cibadmin.8.inc  cibadmin.c  cibsecret.8.inc  cibsecret.c  cibsecret.in  cli.supp  cluster-clean  cluster-clean.in  cluster-helper.in  cluster-init.in  coverage.sh.in  crm.in  crm_attribute.8.inc  crm_attribute.c  crm_diff.8.inc  crm_diff.c  crm_diff_new.xml  crm_diff_old.xml  crm_error.8.inc  crm_error.c  crm_failcount  crm_failcount.in  crm_inject.c  crm_master  crm_master.in  crm_mon.8.inc  crm_mon.c  crm_mon.h  crm_mon.service.in  crm_mon.sysconfig  (+70 more)
transitioner/: Makefile.am  actions.c  callbacks.c  events.c  fsa.c  fsa_data.c  main.c  te_callbacks.h  te_fsa.h  tengine.h  ttest.c  utils.c
(+14275 files in other folders)
